MakeCatalog: surface brightness limit and removed mag limit
Previously the surface brightness limit and magnitude limit were
defined in terms of a fixed projected area (arcsec^2) and the S/N of
the objects or clumps. But in the first case, the projected area
should not be used since noise is only dependent on the pixel and the
pixel is the unit of our data-collection. Its physical or projected
size are irrelevant. In the latter case, the area used to find the S/N
was not clear and thus this value was very unrealistic. Therefore I
tried to explain how to use number counts (from the outputs of
MakeCatalog) in order to estimate the limiting magnitude.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2015-09-23  Mohammad Akhlaghi  <akhlaghi@gnu.org>
+
+	* doc/gnuastro.texi (Depth and limiting magnitude): Updated
+	explanations in for the depth and limiting magnitude to be more
+	realistic.
+
+	* src/mkcatalog/mkcatalog.c (makeoutput): Removed the limiting
+	magnitude calculation that was previously defined since it's
+	physical meaning is very unclear (it was mainly put as a
+	test). Also changed the surface brightness limit to a per-pixel
+	basis (independent of the projected area of the pixel) as
+	explained in the manual.
+
 2015-09-17  Mohammad Akhlaghi  <akhlaghi@gnu.org>
 
 	* src/mkprof/mkprof.c (mkprof): Only print a log file if the
