NoiseChisel and MakeCatalog: using median for depth not maximum
Until now the maximum standard deviation in the meshes was used as the
depth. However, the maximum has a strong scatter such that one outling
mesh can completely shift to unreasonable values. So, although the
maximum standrard deviation is still reported by NoiseChisel, but
Makecatalog uses the median standard deviation.

I also added a median function to `statistics.[ch]'.

A tiny spelling mistake was also fixed in MakeCatalog's `--help'
output.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+2015-10-02  Mohammad Akhlaghi  <akhlaghi@gnu.org>
+
+	* src/noisechisel/noisechisel.c (makeoutput): Added a "raw" term
+	in the comments of the noise statistics so emphasize that this is
+	from the raw mesh grid and not the interpolated and smoothed grid.
+
+	* src/mkcatalog/mkcatalog.c (makeoutput): As explained below.
+
+	* doc/gnuastro.texi (Depth and limiting magnitude): Changed the
+	sigma which representes depth from the maximum to the median. The
+	maximum has a strong scatter and even one mesh can completely push
+	to unreasonable values. But the median is not affected by such
+	minor mesh variations, so it is a more robust measure of the
+	dispersion.
+
 2015-10-01  Mohammad Akhlaghi  <akhlaghi@gnu.org>
 
 	* src/imgcrop/ui.c (checkifset): Removed the hstartwcs and hendwcs
