Call manually the cropping functions in imgcrop
Fixes bug#45380: if optimization flag -O2 or higher is used, a bus error
is signaled when trying to access "p->cp.nolog" after calling the
function pointed to by modefunction.  Not using modefunction and calling
the appropriate function "by hand" avoids this crash.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2015-10-18  Mosè Giordano  <mose@gnu.org>
+
+	* src/imgcrop/imgcrop.c (imgcrop): Do not use modefunction to set
+	the function, run the functions manually instead.  Fixes
+	bug#45380.
+
 2015-10-16  Mosè Giordano  <mose@gnu.org>
 
 	* ./*: Change in many files the name of the package from
