Add fits.fz to the list of accepted extension
Fixes taks#13767.  Relying on CFITSIO, Gnuastro was already able to read
files compressed with fpack, it was just that it did not accept the
standard extension.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2015-11-04  Mosè Giordano  <mose@gnu.org>
+
+	* lib/fitsarrayvv.c (nameisfits): Add "fits.fz" to the list of
+	accepted extensions.  Fixes task#13767.
+	(nameisfitssuffix): Ditto.
+
 2015-10-18  Mosè Giordano  <mose@gnu.org>
 
 	* src/imgcrop/imgcrop.c (imgcrop): Do not use modefunction to set
