--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2015-11-04  Mosè Giordano  <mose@gnu.org>
 
+	* doc/gnuastro.texi (Arguments): Mention new accepted extension.
+
 	* lib/fitsarrayvv.c (nameisfits): Add "fits.fz" to the list of
 	accepted extensions.  Fixes task#13767.
 	(nameisfitssuffix): Ditto.
