--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -447,8 +447,8 @@ Developing
 * Program source::              Conventions for the code.
 * Test scripts::                Understanding the test scripts.
 * Building::                    Explanations on building.
-* After making changes::        What to do after you have finished you changes.
-* Production workflow::         Implementing changes/additions.
+* After making changes::        Checklist to finalize your changes.
+* Contributing to Gnuastro::    Share your changes with all users.
 
 Program source
 
@@ -461,6 +461,11 @@ Mandatory source code files
 
 * Coding conventions::          Conventions used for coding
 * Multithreaded programming::   Gnuastro uses POSIX threads.
+
+Contributing to Gnuastro
+
+* Commit guidelines::           Standards for commit messages.
+* Production workflow::         Incorporating changes into Gnuastro.
 
 Other useful software
 
@@ -7925,7 +7930,7 @@ might be strong differences from one grid element to the next. By
 smoothing the grid, the variation between grid element to grid element
 will be far less. To smooth the mesh values, Gnuastro uses an average
 filter. An average filter is just a convolution of the mesh grid
-(spatial convolution with edge correction) by a kernel will all
+(spatial convolution with edge correction) by a kernel with all
 elements having an equal weight, see @ref{Convolution process}. The
 kernel is a square. The length of the kernel edge can be set in units
 of meshs through the @option{--smoothwidth} option (which has to be an
@@ -11448,8 +11453,8 @@ discussed. Finally some notes on the building process are given.
 * Program source::              Conventions for the code.
 * Test scripts::                Understanding the test scripts.
 * Building::                    Explanations on building.
-* After making changes::        What to do after you have finished you changes.
-* Production workflow::         Implementing changes/additions.
+* After making changes::        Checklist to finalize your changes.
+* Contributing to Gnuastro::    Share your changes with all users.
 @end menu
 
 
@@ -11871,11 +11876,6 @@ This directory keeps all the tests (checks) which are executed when
 @command{make check} is run.
 
 @end table
-
-Until Gnuastro grows large enough to define its own, we strive to
-follow the version control guidelines of the Git project as our
-base. You can find it in the Git project's submitting patches
-guideline@footnote{@url{https://github.com/git/git/blob/master/Documentation/SubmittingPatches}}.
 
 
 
@@ -12485,7 +12485,7 @@ can get you started off.
 
 
 
-@node After making changes, Production workflow, Building, Developing
+@node After making changes, Contributing to Gnuastro, Building, Developing
 @section After making changes
 After you have made your your changes/additions, please take the
 following steps:
@@ -12539,16 +12539,65 @@ own purposes.
 
 
 
-@node Production workflow,  , After making changes, Developing
-@section Production workflow
+@node Contributing to Gnuastro,  , After making changes, Developing
+@section Contributing to Gnuastro
 
 After you have checked your changes (see @ref{After making changes}),
 you might want to share them with the larger community. In this
-section we describe the general workflow that is currently planned for
-Gnuastro. This workflow is now mostly borrowed from the general
-recommendations of GitHub. But since Gnuastro is under heavy
-development currently, these might change and evolve to better suite
-our needs.
+section we describe the Commit guidelines and the general workflow
+that is currently planned for Gnuastro. This workflow is currently
+mostly borrowed from the general recommendations of
+Git@footnote{@url{https://github.com/git/git/blob/master/Documentation/SubmittingPatches}}
+and GitHub. But since Gnuastro is under heavy development currently,
+these might change and evolve to better suite our needs.
+
+@menu
+* Commit guidelines::           Standards for commit messages.
+* Production workflow::         Incorporating changes into Gnuastro.
+@end menu
+
+@node Commit guidelines, Production workflow, Contributing to Gnuastro, Contributing to Gnuastro
+@subsection Commit guidelines
+
+We strive to follow these standards for the commit messages in
+Gnuastro.
+
+@table @asis
+
+@item Commit title
+The commits have to start with one short descriptive title. This will
+help when getting a log output of all the commits, since most emulated
+command line terminals are about 80 characters wide, it is best for
+this title to be less than about 60 (or even 50) characters to also
+allow for the commit labels and branches. The title should also not
+finish with any full-stops or periods.
+
+@item Commit body
+The body of the commit message should be separated with the title by
+one empty line. The body should be very descriptive. Try to explain
+the committed contents as best as you can. Try to remember that the
+people (or even your self) who will be reading this later don't have
+the background that you currently have. So be very descriptive and
+explain as much as possible: what the bug/task was, justify the way
+you fixed it and discuss other possible solutions that you might not
+have included. For the last item, it is best to discuss them
+thoroughly as comments in the appropriate section of the code, but
+only give a short summary in the commit message.
+
+A reference to a bug or task ID on Savannah is necessary when the
+commit has to do with such issues. If the commit is a fix to a bug,
+start the commit body with ``@code{Fixed bug #ID:}'' and if it is a
+task, ``@code{Finished task #ID:}'' followed by a description of what
+the bug/task was. Although giving URL references in the description
+can be very good to help others understand the issue, it is best to
+also accompany each such URL with a description of the relevant point
+within it (assume that the reader doesn't have internet access when
+reading the commit message).
+
+@end table
+
+@node Production workflow,  , Commit guidelines, Contributing to Gnuastro
+@subsection Production workflow
 
 Fortunately Pro Git has done a wonderful job in explaining the
 different workflows in Chapter
@@ -12559,9 +12608,10 @@ Section
 5.2@footnote{@url{http://git-scm.com/book/en/v2/Distributed-Git-Contributing-to-a-Project}}
 under ``Forked-Public-Project''. Upon a release, a tag will be put on
 the appropriate commit in master marking the release version. So,
-whomever clones Gnuastro will automatically go onto the fully useful
-master branch that contains bug-fixes or additions that might not yet
-be released.
+whomever clones Gnuastro will automatically go onto the ready to be
+used master branch that contains bug-fixes or additions that might not
+yet be released. Anything on the master branch should always be tested
+and ready to be used.
 
 As fully elaborated in Pro Git, there are two methods for you to
 contribute to Gnuastro in this workflow:
@@ -12570,15 +12620,15 @@ contribute to Gnuastro in this workflow:
 
 @item
 You can send commit patches by email as fully explained in Pro
-Git. This is good for your first few commits, if you would like to get
-more heavily involved in Gnuastro's development, then you can try the
-next solution.
+Git. This is good for your first few contributions, if you would like
+to get more heavily involved in Gnuastro's development, then you can
+try the next solution.
 
 @item
 You can have your own forked copy of Gnuastro on any hosting site you
-like (GitHub, GitLab, BitBucket, or etc) and inform us of your changes
-so we merge them in. This is more suited for people who commonly
-contribute to the code.
+like (GitHub, GitLab, BitBucket, or etc) and inform us when your
+changes are ready so we merge them in Gnuastro. This is more suited
+for people who commonly contribute to the code.
 
 Just please follow the feature branch methodology: create a new branch
 for every feature you want to add from the most recent master commit
@@ -12597,6 +12647,7 @@ follow the bug or task trackers and contact us before hand so you
 don't do something that someone else is already working on. In that
 case, you can get in touch with them and help the job go on faster,
 see @ref{Gnuastro project webpage}.
+
 
 
 
