--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2015-11-05  Mohammad Akhlaghi  <akhlaghi@gnu.org>
+
+	* doc/gnuastro.texi (Why C): Clarified explanations.
+
 2015-11-04  Mosè Giordano  <mose@gnu.org>
 
 	* .gitignore: Add new regexps to the list of ignored files.
