--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -59,6 +59,9 @@ Texts.  A copy of the license is included in the section entitled
 * ImageCrop: (gnuastro)ImageCrop. Crop region(s) from image(s).
 * astimgcrop: (gnuastro)Invoking astimgcrop. Options to ImageCrop.
 
+* ImageArithmetic: (gnuastro)ImageArithmetic. Arithmetic operations on pixels.
+* astimgarith: (gnuastro)Invoking astimgarith. Options to ImageArithmetic.
+
 * ImageStatistics: (gnuastro)ImageStatistics. Get image Statistics.
 * astimgstat: (gnuastro)Invoking astimgstat. Options to ImageStatistics.
 
@@ -301,6 +304,7 @@ ConvertType
 Image manipulation
 
 * ImageCrop::                   Crop region(s) from FITS image(s).
+* ImageArithmetic::
 * Convolve::                    Convolve an image with a kernel.
 * ImageWarp::                   Warp/Transform an image to a different grid.
 * SubtractSky::                 Find the sky and subtract it from image.
@@ -316,6 +320,11 @@ Invoking ImageCrop
 
 * astimgcrop options::          A list of all the options with explanation.
 * astimgcrop output::           The outputs of ImageCrop.
+
+ImageArithmetic
+
+* Reverse polish notation::     The current notation style for ImageArithmetic
+* Invoking astimgarith::        How to run ImageArithmetic
 
 Convolve
 
@@ -5008,12 +5017,13 @@ given kernel or applying a transformation to it.
 
 @menu
 * ImageCrop::                   Crop region(s) from FITS image(s).
+* ImageArithmetic::
 * Convolve::                    Convolve an image with a kernel.
 * ImageWarp::                   Warp/Transform an image to a different grid.
 * SubtractSky::                 Find the sky and subtract it from image.
 @end menu
 
-@node ImageCrop, Convolve, Image manipulation, Image manipulation
+@node ImageCrop, ImageArithmetic, Image manipulation, Image manipulation
 @section ImageCrop
 
 @cindex Section of an image
@@ -5602,8 +5612,127 @@ cases.
 
 
 
+@node ImageArithmetic, Convolve, ImageCrop, Image manipulation
+@section ImageArithmetic
 
-@node Convolve, ImageWarp, ImageCrop, Image manipulation
+It is commonly necessary to do arithmetic operations on the
+astronomical data. For example in the reduction of raw data it is
+necessary to subtract the Sky value (@ref{Sky value}) from each image
+image. Later (once the images as warped into a single grid using
+ImageWarp for example, see @ref{ImageWarp}), the images can be coadded
+or the output pixel grid is the average of the pixels of the
+individual input images. ImageArithmetic currently uses the reverse
+polish or postfix notation, see @ref{Reverse polish notation}, for
+more information on how to run ImageArithmetic, please see
+@ref{Invoking astimgarith}.
+
+
+@menu
+* Reverse polish notation::     The current notation style for ImageArithmetic
+* Invoking astimgarith::        How to run ImageArithmetic
+@end menu
+
+@node Reverse polish notation, Invoking astimgarith, ImageArithmetic, ImageArithmetic
+@subsection Reverse polish notation
+
+@cindex Postfix notation
+@cindex Reverse Polish Notation
+The most common notation for arithmetic operations is the infix
+notation@footnote{@url{https://en.wikipedia.org/wiki/Infix_notation}}
+where the operator goes between the two operands. While the infix
+notation is the perferred way in most programming languages, currently
+it is not used since it will require parenthesis which can complicate
+the implementation of the code. In the near future we do plan to adopt
+this
+notation@footnote{@url{https://savannah.gnu.org/task/index.php?13867}},
+but for the time being, ImageArithmetic uses the postfix or reverse
+polish
+notation@footnote{@url{https://en.wikipedia.org/wiki/Reverse_Polish_notation}}. The
+referenced wikipedia article provides some excellent explanation on
+this notation but here we will give a short summary for
+self-sufficiency of this manual.
+
+In the postfix notation, the operator is placed after the operands, as
+we will see below this removes the need to define parenthesis for most
+ordinary operators. For example, instead of writing @command{5+6}, we
+write @command{5 6 +}. To easily understand how this notation works,
+you can think of each token of the expression as an item in a stack
+and such that every time an operator is confronted, it pulls two
+operands from the top of the stack, does the operation and pushes the
+result back on top of the stack. So if you want the average of 5 and
+6, you would write: @command{5 6 + 2 /}. The operations that are done
+are:
+
+@enumerate
+@item
+@command{5} is an operand, so push it onto the top of the stack.
+@item
+@command{6} is an operand, so push it onto the top of the stack.
+@item
+@command{+} is a binary operator, so pull the two elements ontop of
+the stack and perform addition on them (the order is @command{5+6} in
+the example above). The result is @command{11}, push it ontop of the
+stack.
+@item
+@command{2} is an operand so push it onto the top of the stack.
+@item
+@command{/} is a binary operator, so pull out the top two elements of
+the stack (first @command{2}, then @command{11}) and divide the second
+one by the first.
+@end enumerate
+
+In ImageArithmetic, the operands can be FITS images or numbers. But
+note that at least one FITS image must be present in the full
+expression. As you can see, very complicated procedures can be created
+without the need for parenthesis. Even functions which take an
+arbitrary number of arguments can be defined in this notation. For
+example the Postscript language (the programming language for PDF
+files) uses this notation style, see the EPS and PDF part of
+@ref{Recognized file types}.
+
+
+@node Invoking astimgarith,  , Reverse polish notation, ImageArithmetic
+@subsection Invoking ImageArithmetic
+
+ImageArithmetic will do arithmetic operations on the individual pixels
+of identically sized images. The WCS information will be taken from
+the first input image. The general template for ImageArithmetic is:
+
+@example
+$ astconvolve [OPTION...] ASTRdata1 ASTRdata2 (or number) OPERATOR ...
+@end example
+
+@noindent
+One line examples:
+
+@example
+$ astimgarith image1.fits image2.fits + 2 / --out=average.fits
+$ astimgarith image.fits image.fits - --out=skysub.fits --hdu=0 --hdu2=3
+@end example
+
+At least one image has to be present in the given expression, if there
+are only numbers, ImageArithmetic will halt with an error. Currently
+ImageArithmetic only operates on floating point images but in the near
+future it will also operate on integer (labeled or masked) images with
+bitwise operators so certain mask layers can also be separated.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@node Convolve, ImageWarp, ImageArithmetic, Image manipulation
 @section Convolve
 
 @cindex Convolution
@@ -6814,7 +6943,7 @@ deployed for the frequency space convolutions.
 @subsection Invoking Convolve
 
 Convolve an input image with a known kernel. The general template for
-convolve is:
+Convolve is:
 
 @example
 $ astconvolve [OPTION...] ASTRdata
@@ -12683,6 +12812,10 @@ kernel (@ref{Convolve}).
 @item Header @value{HEADER_VERSION}
 (@file{astheader}) Print and manipulate the header data of a FITS file
 (see @ref{Header}).
+
+@item ImageCrop @value{IMGARITH_VERSION}
+(@file{astimgarith}) For arithmetic operations on data (image) pixels
+(@ref{ImageArithmetic}).
 
 @item ImageCrop @value{IMGCROP_VERSION}
 (@file{astimgcrop}) Crop region(s) from an image and stitch several
